# causal-workspace-jepa

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  LICENSE  Makefile  README.md  SUMMARY.md  VPS_RUNBOOK.md  pyproject.toml
artifacts/: README.md
artifacts/metrics/: completion_audit.json  completion_audit.provenance.json  eb_jepa_contract_smoke.json  eb_jepa_contract_smoke.provenance.json  eb_jepa_mppi_correction.json  eb_jepa_mppi_correction.provenance.json  (+68 more)
data/: README.md
docs/: APPROACH_REGISTRY.md  BASELINES.md  DATASETS.md  DECISIONS.md  EXPERIMENT_REGISTRY.md  HYPOTHESES.md  LITERATURE.md  LLM_TRACK.md  REPRODUCIBILITY.md  RESEARCH_GAPS.md  RESULTS.md  RISKS.md  ROADMAP.md  TODO.md  WORKSPACE_CRITERIA.md  WORLD_MODEL_TRACK.md
papers/: README.md  causal_workspace_jepa.tex  references.bib
scripts/: aggregate_results.py  audit_completion.py  audit_reproducibility.py  bootstrap_cpu.sh  capture_qwen_activations.py  capture_qwen_binding_mediation.py  doctor.py  doctor_eb_jepa.py  download_dataset.py  evaluate_eb_jepa_competence_job.py  generate_qwen_capital_patches.py  generate_qwen_interventions.py  generate_tier0.py  prepare_eb_jepa.py  prepare_eb_jepa_torch_runtimes.py  prepare_eb_jepa_two_rooms.py  probe_cuda_runtime.py  probe_eb_jepa_mppi_correction.py  probe_eb_jepa_planner_config.py  probe_eb_jepa_planner_constraints.py  probe_eb_jepa_training_resources.py  probe_eb_jepa_two_rooms.py  run_eb_jepa_competence_portfolio.py  run_eb_jepa_training_portfolio.py  run_experiment.py  train_eb_jepa_two_rooms_seed.py  validate_qwen_binding_tokenization.py
(+222 files in other folders)
